--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -3,10 +3,11 @@
   justify-content: space-between;
   align-items: center;
   background-color: rgb(68, 153, 68);
-  padding: 0 20px;
+  padding: 0px 20px;
   height: 80px;
   font-size: 1.7rem;
   position: relative;
+  gap: 32px;
 }
 
 .logo {
@@ -25,7 +26,7 @@
 
 .links {
   display: flex;
-  gap: 20px;
+  gap: 100px;
 }
 
 .link {
