--- a/src/components/BirdsContent/BirdsContent.module.css
+++ b/src/components/BirdsContent/BirdsContent.module.css
@@ -44,14 +44,12 @@
     font-weight: 500;
     transform: scale(1.1);
   }
-  .description p {
-    padding: 10px;
-  }
-
-  h1 {
-    text-align: center;
-  }
   
-  p {
+  .birdsContent p {
+    padding: 15px;
+    display: block;
+    text-decoration: solid;
     text-align: center;
+    font-weight: 300;
+    font-size: x-large;
   }
