--- a/src/components/MainContent/MainContent.module.css
+++ b/src/components/MainContent/MainContent.module.css
@@ -50,11 +50,11 @@
     text-align: center;
   }
   
-  p {
+  .mainContent p {
+    padding: 15px;
+    display: block;
+    text-decoration: solid;
     text-align: center;
+    font-weight: 300;
+    font-size: x-large;
   }
-
-    @media only screen and (max-width: 768px) {
-
-    }
-  
