--- a/src/components/ReptilesContent/ReptilesContent.module.css
+++ b/src/components/ReptilesContent/ReptilesContent.module.css
@@ -44,14 +44,11 @@
     transform: scale(1.1);
   }
   
-  .description p {
-    padding: 10px;
-  }
-
-  h1 {
+  .reptilesContent p {
+    padding: 15px;
+    display: block;
+    text-decoration: solid;
     text-align: center;
-  }
-  
-  p {
-    text-align: center;
+    font-weight: 300;
+    font-size: x-large;
   }
